--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,10 @@
 <head>
-  <title>Hacker Pages</title>
   <meta charset="utf-8">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
-</head>
+  
+  <!-- fonts !-->
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
+  
+ </head>
